test/bad/functions/cmp01.px

func f(): Int def
    return 0

f == f
